--- a/mysql-wordpress.yml
+++ b/mysql-wordpress.yml
@@ -5,16 +5,14 @@ metadata:
   labels:
     app: wordpress
     tier: back-end
+  namespace: wordpress
 spec:
   selector:
     matchLabels:
       app: wordpress
       tier: back-end
   strategy:
-     type: RollingUpdate
-     rollingUpdate:
-       maxSurge: 1
-       maxUnavailable: 1
+     type: Recreate
   template:
     metadata:
       labels:
@@ -22,15 +20,33 @@ spec:
         tier: back-end
     spec:
       containers:
-      - image: mysql:5.6
+      - image: mysql:5.7
         name: mysql
         env:
-         - name: MYSQL_ROOT_PASSWORD
-           value: aurelie
+        - name: MYSQL_DATABASE
+          value: wordpress
+        - name: MYSQL_USER
+          value: aurelie
+        - name: MYSQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-secret
+              key: mysql_password
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: wordpress-secret
+              key: mysql_root_password
         ports:
          - containerPort: 3306
            name: mysql
-     
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        hostPath:
+          path: /data/mysql     
 ---
 
 apiVersion: v1
@@ -40,6 +56,7 @@ metadata:
   labels:
     app: wordpress
     tier: back-end
+  namespace: wordpress
 spec:
   type: ClusterIP
   ports:
